--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
   </section>
   <!-- End of Footer -->
 
-  <script src="node_modules/jquery/dist/jquery.js"></script>
+  <script src="./node_modules/jquery/dist/jquery.js"></script>
   <!-- <script type="module" src="assets/js/main.js"></script> -->
-  <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
   <!-- <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" 
   integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script> -->
